# costal-engineering-platform

./: CLAUDE.md  Cargo.toml  README.md  build.rs  plan.md
docs/: swash_manual.md  swash_wave_generation_implementation_plan.md
scripts/: equations.json  render_equations.py
src/: gui.rs  lib.rs  main.rs
src/gui/: equations.rs  wave_channel.rs
src/waves/: boundary.rs  dispersion.rs  mod.rs  parameters.rs  velocity.rs
tests/: README.md  gui_integration_tests.rs  gui_tests.rs  lib.rs
tests/integration/: main_integration_tests.rs  mod.rs  platform_app_integration_tests.rs  platform_integration_tests.rs  wave_channel_gui_tests.rs
tests/unit/: mod.rs  platform_app_tests.rs  wave_channel_computation_tests.rs  wave_channel_field_tests.rs  wave_channel_parameter_tests.rs  wave_channel_tests.rs
